crates/es-fluent-derive/tests/ui/bad_optional_field.stderr
error: Attribute error in message field: #[fluent(optional)] can only be used on Option<T> fields
 --> tests/ui/bad_optional_field.rs:8:5
  |
8 |     value: String,
  |     ^^^^^
